2011-12-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([xemacs]): Use (find-coding-system 'utf-8-unix)
	instead of checking the XEmacs version to decide when 'un-define
	is required.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (send-to-emacs): Add a without-slime-interrupts to
	protect send/receive from arbitrary interrupts.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	Move flow control from dispatch-event to send-to-emacs.

	* swank.lisp (*send-counter*): New thread local variable.
	(with-connection): Bind it.
	(send-to-emacs): Call maybe-slow-down.
	(maybe-slow-down, ping-pong): Go through dispatch-event instead of
	writing to the socket directly.
	(dispatch-event): Re-add thread arg to :ping/:emacs-pong.
	Also add a :test-delay event.
	(perform-indentation-update): Use with-connection to bind
	*emacs-connection* and *send-counter*.
	(background-message): Remove reference to connection.slowdown.
	(flow-control-test): New support code for testing flow-control.
	([defstruct] connection): Delete send-counter and slowdown slots.

	* slime.el (slime-dispatch-event): Re-add thread arg to
	:ping/:emacs-pong and :test-delay event.
	([test] flow-control): New test.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-update-system-indentation): Moved to
	contrib/slime-indentation.el.

2011-12-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-batch-test): Forgot to rename slime-run-one-test
	to slime-run-test here.
	(slime-net-connect): Remove coding-system argument.
	(slime-xref-insert-recompilation-flags): Use insert-char instead
	of (dotimes (i ..) (insert " " ..)) to avoid the compiler warning.
	([test] break, slime-forward-sexp): Use _i in dotimes.

2011-12-07  Stas Boukarev  <stassats@gmail.com>

	* doc/.cvsignore: Aadd html.tgz

2011-12-07  Didier Verna  <didier@xemacs.org>

	* doc/.cvsignore: Add more files generated by Texinfo (.kys, .fns
	and .vrs).
